deploy/production/redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grc-redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grc-redis
  template:
    metadata:
      labels:
        app: grc-redis
    spec:
      securityContext:
        runAsUser: 1001
        runAsNonRoot: true
      containers:
      - name: grc-redis
        image: docker.io/bitnamisecure/redis:latest@sha256:341edafd5622a1e47e4b3ab379913de84ea4a50d534f40aaa903a3825e0e1cf1
        imagePullPolicy: Always
        ports:
        - containerPort: 6379
        securityContext:
          allowPrivilegeEscalation: false
