deploy/production/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grc-redis-service
  namespace: grc-prod
spec:
  selector:
    app: grc-redis
  ports:
    - port: 6379
      targetPort: 6379
