deploy/production/ingress-admin.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gender-recognition-service-admin
  namespace: grc-prod
  annotations:
    nginx.ingress.kubernetes.io/whitelist-source-range: >-
      128.77.75.64/26,
      194.33.196.0/24,
      194.33.192.0/24,
      51.149.249.0/29,
      51.149.249.32/29,
      51.149.250.0/24,
      81.153.123.31/32,
      88.97.224.83/32,
      90.209.17.46/32
    nginx.ingress.kubernetes.io/server-snippet: |
      location @custom_403 {
        return 403 "{\"msg\":\"<br/>Gender Recognition Panel<br/>This is a restricted page. Please contact by email or telephone if you need access<br/>GRPenquiries@justice.gov.uk<br>Telephone: 0300 303 5837  Monday to Friday, 9am to 5pm<br/>\"}";
      }
      error_page 403 @custom_403;
    nginx.ingress.kubernetes.io/ssl-protocols: "TLSv1.2 TLSv1.3"
    nginx.ingress.kubernetes.io/ssl-ciphers: "ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305"
    external-dns.alpha.kubernetes.io/set-identifier: gender-recognition-service-admin-grc-prod-green
    external-dns.alpha.kubernetes.io/aws-weight: "100"
spec:
  ingressClassName: default
  tls:
  - hosts:
    - admin.apply-gender-recognition-certificate.service.gov.uk
    secretName: apply-gender-recognition-service-admin-secret
  - hosts:
    - dashboard.apply-gender-recognition-certificate.service.gov.uk
    secretName: apply-gender-recognition-dashboard-secret

  rules:
    - host: admin.apply-gender-recognition-certificate.service.gov.uk
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: grc-admin-service
                port:
                  number: 3001

    - host: dashboard.apply-gender-recognition-certificate.service.gov.uk
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: grc-dashboard-service
                port:
                  number: 3002
