deploy/production/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gender-recognition-service
  namespace: grc-prod
  annotations:
    external-dns.alpha.kubernetes.io/set-identifier: gender-recognition-service-grc-prod-green
    external-dns.alpha.kubernetes.io/aws-weight: "100"
    nginx.ingress.kubernetes.io/enable-modsecurity: "true"
    nginx.ingress.kubernetes.io/modsecurity-snippet: |
      SecRuleEngine On
      SecDefaultAction "phase:2,pass,log,tag:github_team=pet"
      SecRule REQUEST_URI "@beginsWith /upload" \
        "id:1000,\
        phase:1,\
        pass,\
        nolog,\
        ctl:ruleRemoveById=951240"
    nginx.ingress.kubernetes.io/server-snippet: |
      location @custom_403 {
        return 403 "<h1>There is a problem:</h1><br><h3>Go back to the previous page using the back arrow and enter valid content</h3>";
      }
      error_page 403 @custom_403;
spec:
  ingressClassName: modsec
  tls:
  - hosts:
    - apply-gender-recognition-certificate.service.gov.uk
    secretName: apply-gender-recognition-service-app-secret
  - hosts:
      - dashboard.apply-gender-recognition-certificate.service.gov.uk
    secretName: apply-gender-recognition-dashboard-secret

  rules:
  - host: apply-gender-recognition-certificate.service.gov.uk
    http:
      paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: maintenance-page-svc
                port: 
                  number: 8080
   
  - host: dashboard.apply-gender-recognition-certificate.service.gov.uk
    http:
      paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: maintenance-page-svc
                port: 
                  number: 8080
